--- a/task3/readme
+++ b/task3/readme
@@ -13,11 +13,11 @@
 Дополнительные сведения.
 
     Примечание 1. В Unix каждому файлу соответствует набор прав доступа, представленный в виде 9-ти битов режима.
-Режимы доступа разбиты на группы по три, где первая группа отвечает за разрешения для владельца файла, 
-вторая за разрешения группы, которой принадлежит файл, и третья за разрешения для остальных пользователей.
-Разрешения бывают 3-х видов: разрешение на чтение(r), на запись(w) и на исполнение (x).
+		Режимы доступа разбиты на группы по три, где первая группа отвечает за разрешения для владельца файла, вторая за разрешения группы, которой принадлежит файл, и третья за разрешения для остальных пользователей.
+		Разрешения бывают 3-х видов: разрешение на чтение(r), на запись(w) и на исполнение (x).
 
-    Примечание 2. Функция int setuid(uid_t uid) изменяет эффективный идентификатор вызывающего процесса, если аргумент функции uid совпадает с реальным идентификатором пользователя.
+    Примечание 2. Функция int setuid(uid_t uid) изменяет эффективный идентификатор вызывающего процесса, если аргумент функции uid совпадает с 
+	реальным идентификатором пользователя.
     
     Примечание 3. Обычно реальный и эффективный идентификаторы процесса совпадают, но существует возможность дать процессу более широкие права, чем права пользователя, его запустившего. 
     Это можно сделать с помощью установки suid-бита на файле. Этот бит позволяет назначить права доступа исходя из прав доступа владельца файла, т.е. при запуске на выполнение файла с установленным suid-битом, эффективный идентификатор процесса будет изменен на идентификатор владельца исполняемого файла.
