--- a/task3/readme
+++ b/task3/readme
@@ -10,7 +10,7 @@
         2. Файл не закрыт. Код ошибки будет возвращен в функцию main для дальнейшей обработки. (Программа будет завершена досрочно)
         
 В функции main() мы вызываем последовательно функции printID() и openFile(), в первый раз перед использованием системного вызова setuid()(см. прим.2), 
-  второй раз после. В случае возникновения ошибок или проблем завершаем программу с соответсвующим кодом ошибки. Если в ходе выполнения программы проблем 
+  второй раз после. В случае возникновения ошибок или проблем завершаем программу с соответствующим кодом ошибки. Если в ходе выполнения программы проблем 
   не выявлено, программа завершается с кодом 0.
 
 
