--- a/task3/readme
+++ b/task3/readme
@@ -1,3 +1,5 @@
+Ссылка на google-документ с тем же содержимым: https://docs.google.com/document/d/1V08wS72f41p9Uxeg2t3czmbikzujWySU3hB5zVbM9Tg/edit?usp=sharing
+
 Функция printID() печатает реальный идентификатор пользователя (uid) и эффективный идентификатор пользователя (euid). (См. прим.3)
     getuid() возвращает реальный идентификатор пользователя, т.е. идентификатор пользователя, запустившего процесс.
     geteuid() возвращает эффективный идентификатор пользователя, который служит для определения прав доступа процесса к файлам. Также, 
